chore: reduce reconciliation interval to 5m

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ tfplan
 provider*.tf
 **/target
 **/vendor
+
+kubernetes/hetzner-personal/applications/listmonk/secrets.env
+kubernetes/hetzner-personal/applications/listmonk/.envrc
