--- a/kubernetes/hetzner-personal/applications/listmonk/httproute.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/httproute.yml
@@ -13,11 +13,9 @@ spec:
       sectionName: https
   rules:
     - backendRefs:
-        - group: ""
-          kind: Service
+        - kind: Service
           name: listmonk
           port: 80
-          weight: 1
       filters:
         - responseHeaderModifier:
             set:
