--- a/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   force: true
-  interval: 10m0s
+  interval: 5m
   path: ./kubernetes/hetzner-personal/applications/listmonk
   prune: true
   sourceRef:
