--- a/kubernetes/hetzner-personal/network/kustomize.yml
+++ b/kubernetes/hetzner-personal/network/kustomize.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 10m0s
+  interval: 5m
   path: ./kubernetes/hetzner-personal/network
   prune: true
   sourceRef:
