--- a/kubernetes/hetzner-personal/applications/echo-server/externalsecret.yml
+++ b/kubernetes/hetzner-personal/applications/echo-server/externalsecret.yml
@@ -17,7 +17,7 @@ spec:
     immutable: false
     template:
       data:
-        identity: "{{ .sshKey | toString }}"
+        identity: "{{ .sshKey | toString -}}"
         known_hosts: |
           github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOMqqnkVzrm0SdG6UOoqKLsabgH5C9okWi0dh2l9GKJl
           github.com ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBEmKSENjQEezOmxkZMy7opKgwFB9nkt5YRrYMjNuG5N87uRgg6CLrbo5wAdT/y6v0mKV0U2w0WZ2YB/++Tpockg=
