feat(hetzner): deploy alertmanager only

--- a/kubernetes/hetzner-personal/helm-releases/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kustomization.yml
@@ -10,3 +10,4 @@ configMapGenerator:
 resources:
   - ./cert-manager/kustomize.yml
   - external-secrets/helm-release.yml
+  - prometheus/helm-release.yml
