feat: deploy fluxcd notification resources

--- a/kubernetes/hetzner-personal/kustomization.yml
+++ b/kubernetes/hetzner-personal/kustomization.yml
@@ -3,3 +3,4 @@ resources:
   - ./helm-releases/gotk-sync.yml
   - ./network/kustomize.yml
   - ./applications/kustomize.yml
+  - ./notifications/kustomize.yml
