--- a/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
@@ -71,6 +71,18 @@ items:
                   - "namespace"
               - target_matchers:
                   - "alertname = InfoInhibitor"
+            route:
+              group_by: ["namespace"]
+              group_wait: 30s
+              group_interval: 5m
+              repeat_interval: 12h
+              receiver: "null"
+              routes:
+                - receiver: "null"
+                  matchers:
+                    - alertname =~ "Watchdog|InfoInhibitor"
+            receivers:
+              - name: "null"
             templates:
               - "/etc/alertmanager/config/*.tmpl"
         coreDns:
