chore: override namespace injection of alertmanager

--- a/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
@@ -43,6 +43,9 @@ items:
         remediation:
           remediateLastFailure: true
       values:
+        alertmanagerSpec:
+          alertmanagerConfigMatcherStrategy:
+            type: None
         alertmanager:
           enabled: true
           config:
