--- a/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
@@ -81,59 +81,11 @@ items:
               repeat_interval: 12h
               receiver: "null"
               routes:
-                - matchers:
-                    - name: severity
-                      value: info
-                  receiver: discord
-                  continue: false
-                  groupWait: 0s
-                - matchers:
-                    - name: severity
-                      matchType: "=~"
-                      value: "critical|error"
-                  receiver: slack
-                  groupWait: 1m
-                  repeatInterval: 1h
-                  continue: false
                 - receiver: "null"
                   matchers:
                     - alertname =~ "Watchdog|InfoInhibitor"
             receivers:
               - name: "null"
-              - name: slack
-                slackConfigs:
-                  - apiURL:
-                      key: slackWebhook
-                      name: alertmanager
-                      optional: false
-                    channel: "#alerts"
-                    sendResolved: true
-                    text: |-
-                      {{ range .Alerts }}
-                      *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
-                      *Description:* {{ .Annotations.description }}
-                      *Details:*
-                      {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
-                      {{ end }}
-                      {{ end }}
-                    title: "{{ .CommonAnnotations.summary }}"
-                    titleLink: "{{ .CommonAnnotations.runbook_url }}"
-              - name: discord
-                discordConfigs:
-                  - apiURL:
-                      key: discordWebhook
-                      name: alertmanager
-                      optional: false
-                    sendResolved: false
-                    message: |-
-                      {{ range .Alerts }}
-                      *Info:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
-                      *Description:* {{ .Annotations.description }}
-                      *Details:*
-                      {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
-                      {{ end }}
-                      {{ end }}
-                    title: "{{ .CommonAnnotations.summary }}"
             templates:
               - "/etc/alertmanager/config/*.tmpl"
         coreDns:
@@ -179,3 +131,71 @@ items:
         creationPolicy: Owner
         deletionPolicy: Delete
         immutable: false
+  - apiVersion: monitoring.coreos.com/v1alpha1
+    kind: AlertmanagerConfig
+    metadata:
+      name: alertmanager
+      namespace: monitoring
+    spec:
+      receivers:
+        - name: default-receiver
+        - name: slack
+          slackConfigs:
+            - apiURL:
+                key: slackWebhook
+                name: alertmanager
+                optional: false
+              channel: "#alerts"
+              sendResolved: true
+              text: |-
+                {{ range .Alerts }}
+                *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+                {{ end }}
+              title: "{{ .CommonAnnotations.summary }}"
+              titleLink: "{{ .CommonAnnotations.runbook_url }}"
+        - name: discord
+          discordConfigs:
+            - apiURL:
+                key: discordWebhook
+                name: alertmanager
+                optional: false
+              sendResolved: false
+              message: |-
+                {{ range .Alerts }}
+                *Info:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+                {{ end }}
+              title: "{{ .CommonAnnotations.summary }}"
+      route:
+        continue: false
+        groupBy:
+          - alertname
+          - name
+          - kind
+          - severity
+        groupInterval: 60m
+        groupWait: 5m
+        receiver: default-receiver
+        repeatInterval: 12h
+        routes:
+          - matchers:
+              - name: severity
+                value: info
+            receiver: discord
+            groupWait: 1s
+          - matchers:
+              - name: severity
+                value: error
+            receiver: slack
+            groupWait: 1m
+        matchers:
+          - name: severity
+            matchType: "=~"
+            value: "critical|warning|error|info"
