chore: lower the echo-server timeout to 1m

--- a/kubernetes/hetzner-personal/applications/echo-server/kustomize-target.yml
+++ b/kubernetes/hetzner-personal/applications/echo-server/kustomize-target.yml
@@ -4,7 +4,7 @@ metadata:
   name: echo-server
 spec:
   force: true
-  interval: 10m0s
+  interval: 1m
   patches:
     - patch: |
         - op: replace
