chore: lower the group interval of info notifs

--- a/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
@@ -190,6 +190,7 @@ items:
                 value: info
             receiver: discord
             groupWait: 1s
+            groupInterval: 1m
           - matchers:
               - name: severity
                 value: error
