chore: group on revision instead of name

--- a/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
@@ -176,8 +176,8 @@ items:
       route:
         continue: false
         groupBy:
-          - name
           - severity
+          - revision
         groupInterval: 60m
         groupWait: 5m
         receiver: default-receiver
