feat: deploy webhook sync stack

--- a/kubernetes/hetzner-personal/kustomization.yml
+++ b/kubernetes/hetzner-personal/kustomization.yml
@@ -4,3 +4,4 @@ resources:
   - ./network/kustomize.yml
   - ./applications/kustomize.yml
   - ./notifications/kustomize.yml
+  - ./webhook-sync/kustomize.yml
