--- a/kubernetes/hetzner-personal/notifications/alert-error.yml
+++ b/kubernetes/hetzner-personal/notifications/alert-error.yml
@@ -11,5 +11,8 @@ spec:
     - kind: Kustomization
       name: "*"
       namespace: flux-system
+    - kind: HelmRelease
+      name: "*"
+      namespace: flux-system
   providerRef:
     name: alertmanager
