chore: increase ExternalSecrets' refresh interval to avoid AWS charges

--- a/kubernetes/hetzner-personal/applications/echo-server/externalsecret.yml
+++ b/kubernetes/hetzner-personal/applications/echo-server/externalsecret.yml
@@ -7,7 +7,7 @@ spec:
     - remoteRef:
         key: /github/echo-server/deploy-key
       secretKey: sshKey
-  refreshInterval: 5m
+  refreshInterval: 1h
   secretStoreRef:
     kind: ClusterSecretStore
     name: aws-parameter-store
