--- a/kubernetes/hetzner-personal/webhook-sync/externalsecret.yml
+++ b/kubernetes/hetzner-personal/webhook-sync/externalsecret.yml
@@ -7,7 +7,7 @@ spec:
     - remoteRef:
         key: /github/developer-friendly/blog/flux-system/receiver/token
       secretKey: token
-  refreshInterval: 5m
+  refreshInterval: 1h
   secretStoreRef:
     kind: ClusterSecretStore
     name: aws-parameter-store
