--- a/kubernetes/hetzner-personal/applications/listmonk/externalsecret.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/externalsecret.yml
@@ -19,7 +19,7 @@ spec:
   - remoteRef:
       key: /listmonk/admin/password
     secretKey: LISTMONK_app__admin_password
-  refreshInterval: 5m
+  refreshInterval: 1h
   secretStoreRef:
     kind: ClusterSecretStore
     name: aws-parameter-store
