--- a/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/prometheus/helm-release.yml
@@ -123,7 +123,7 @@ items:
         - remoteRef:
             key: /discord/developer-friendly/webhooks/info
           secretKey: discordWebhook
-      refreshInterval: 6m
+      refreshInterval: 1h
       secretStoreRef:
         kind: ClusterSecretStore
         name: aws-parameter-store
