--- a/kubernetes/hetzner-personal/network/cluster-issuer/externalsecret.yml
+++ b/kubernetes/hetzner-personal/network/cluster-issuer/externalsecret.yml
@@ -7,7 +7,7 @@ spec:
   - remoteRef:
       key: /cloudflare/api_token
     secretKey: cloudflareApiToken
-  refreshInterval: 5m
+  refreshInterval: 1h
   secretStoreRef:
     kind: ClusterSecretStore
     name: aws-parameter-store
