feat: deploy kratos for the ory-example frontend

--- a/kubernetes/hetzner-personal/helm-releases/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kustomization.yml
@@ -11,3 +11,4 @@ resources:
   - ./cert-manager/kustomize.yml
   - external-secrets/helm-release.yml
   - prometheus/helm-release.yml
+  - kratos/helm-release.yml
