fix: disable suffix hash for kratos files

--- a/kubernetes/hetzner-personal/helm-releases/kratos/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/kustomization.yml
@@ -9,6 +9,8 @@ configMapGenerator:
       - ./debug.jsonnet
       - ./config.yml
     name: kratos-files
+    options:
+      disableNameSuffixHash: true
 
 resources:
   - repository.yml
