fix: specify namespace for kratos-files CM

--- a/kubernetes/hetzner-personal/helm-releases/kratos/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/kustomization.yml
@@ -9,6 +9,7 @@ configMapGenerator:
       - ./debug.jsonnet
       - ./config.yml
     name: kratos-files
+    namespace: auth
     options:
       disableNameSuffixHash: true
 
