--- a/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
@@ -138,7 +138,7 @@ kratos:
     # When set to job, the migration will be executed as a job on release or upgrade.
     # When set to initContainer, the migration will be executed when Kratos pod is created
     # Defaults to job
-    type: initContainer
+    type: job
     # -- Ability to override the entrypoint of the automigration container
     # (e.g. to source dynamic secrets or export environment dynamic variables)
     customCommand: []
