fix: give up with postgres and use sqlite

--- a/kubernetes/hetzner-personal/helm-releases/kratos/config.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/config.yml
@@ -3,7 +3,7 @@ identity:
     - id: users
       url: https://gist.githubusercontent.com/developer-friendly-bot/c3ce3c0c1ee6e4e706d3773ad7067132/raw/217a01ef02d78d29dd844461917bc22a616892f4/kratos.identity-schema.json
   default_schema_id: users
-# dsn: PLACEHOLDER
+dsn: sqlite:///var/kratos/sqlite/db.sqlite?_fk=true&mode=rwc
 selfservice:
   default_browser_return_url: https://ory.developer-friendly.blog
   flows:
