--- a/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
@@ -261,10 +261,15 @@ deployment:
     - name: kratos-files
       configMap:
         name: kratos-files
+    - name: kratos-data
+      persistentVolumeClaim:
+        claimName: kratos-data
   extraVolumeMounts:
     - name: kratos-files
       mountPath: /var/lib/kratos
       readOnly: true
+    - name: kratos-data
+      mountPath: /var/kratos
 
   # extraVolumes:
   #   - name: postgresql-tls
