--- a/kubernetes/hetzner-personal/helm-releases/kratos/release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/release.yml
@@ -68,7 +68,7 @@ spec:
   releaseName: kratos
   targetNamespace: auth
   test:
-    enable: true
+    enable: false
     ignoreFailures: true
     timeout: 1m
   timeout: 5m
