chore: remove kind from kratos httproute backend-refs

--- a/kubernetes/hetzner-personal/helm-releases/kratos/httproute.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/httproute.yml
@@ -13,8 +13,7 @@ spec:
       sectionName: https
   rules:
     - backendRefs:
-        - kind: Service
-          name: kratos-public
+        - name: kratos-public
           port: 80
       filters:
         - responseHeaderModifier:
