--- a/kubernetes/hetzner-personal/helm-releases/kratos/httproute.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/httproute.yml
@@ -4,7 +4,7 @@ metadata:
   name: kratos
 spec:
   hostnames:
-    - kratos.developer-friendly.blog
+    - auth.developer-friendly.blog
   parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
