chore: rewrite most of the hetzner server and move OIDC config to GH Pages

--- a/ansible/hetzner/main.yml
+++ b/ansible/hetzner/main.yml
@@ -49,6 +49,8 @@
   gather_facts: false
   hosts: hetzner
   name: Configure cluster secret store
+  vars_files:
+    - ./vars.yml
   roles:
     - cluster-secret-store
   tags:
