--- a/ansible/roles/k8s-oidc/handlers/main.yml
+++ b/ansible/roles/k8s-oidc/handlers/main.yml
@@ -1,16 +1,5 @@
----
-- name: Restart wellknown-server
+- name: Reload update-jwks
   ansible.builtin.systemd:
-    name: wellknown-server
-    state: restarted
-    daemon_reload: true
-- name: Restart static-web-server-prepare
-  ansible.builtin.systemd:
-    name: static-web-server-prepare
-    state: restarted
-    daemon_reload: true
-- name: Restart static-web-server
-  ansible.builtin.systemd:
-    name: static-web-server
-    state: restarted
+    name: update-jwks
+    state: reloaded
     daemon_reload: true
