--- a/kubernetes/hetzner-personal/helm-releases/kratos/kustomize.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/kustomize.yml
@@ -11,5 +11,5 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  targetNamespace: cert-manager
+  targetNamespace: default
   wait: true
