fix: depend the amcfg on the prometheus deployment

--- a/kubernetes/hetzner-personal/helm-releases/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kustomization.yml
@@ -10,5 +10,6 @@ configMapGenerator:
 resources:
   - ./cert-manager/kustomize.yml
   - external-secrets/helm-release.yml
-  - prometheus/helm-release.yml
+  - ./prometheus/kustomize.yml
+  - ./alertmanager/kustomize.yml
   - kratos/kustomize.yml
