--- a/kubernetes/hetzner-personal/helm-releases/gotk-sync.yml
+++ b/kubernetes/hetzner-personal/helm-releases/gotk-sync.yml
@@ -1,19 +1,16 @@
-apiVersion: v1
-kind: List
-items:
-  - apiVersion: kustomize.toolkit.fluxcd.io/v1
-    kind: Kustomization
-    metadata:
-      name: helm-releases
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: helm-releases
+  namespace: flux-system
+spec:
+  interval: 5m
+  path: ./kubernetes/hetzner-personal/helm-releases
+  prune: true
+  dependsOn:
+    - name: namespaces
       namespace: flux-system
-    spec:
-      interval: 5m
-      path: ./kubernetes/hetzner-personal/helm-releases
-      prune: true
-      dependsOn:
-        - name: namespaces
-          namespace: flux-system
-      sourceRef:
-        kind: GitRepository
-        name: flux-system
-      wait: false
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  wait: false
