chore(kratos): add origin to exposed headers

--- a/kubernetes/hetzner-personal/helm-releases/kratos/config.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/config.yml
@@ -300,6 +300,9 @@ serve:
     cors:
       allowed_origins:
         - https://ory.developer-friendly.blog
+      exposed_headers:
+        - content-type
+        - origin
       options_passthrough: true
       max_age: 0
       debug: false
