--- a/kubernetes/hetzner-personal/helm-releases/kratos/httproute.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/httproute.yml
@@ -51,6 +51,8 @@ spec:
                 value: none
               - name: X-XSS-Protection
                 value: "0"
+              - name: Origin
+                value: https://auth.developer-friendly.blog
           type: ResponseHeaderModifier
       matches:
         - path:
