--- a/kubernetes/hetzner-personal/helm-releases/kratos/config.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/config.yml
@@ -237,7 +237,7 @@ selfservice:
     link:
       config:
         lifespan: 1h
-        base_url: http://localhost:4433
+        base_url: https://auth.developer-friendly.blog
       enabled: true
     code:
       mfa_enabled: false
