--- a/kubernetes/hetzner-personal/helm-releases/kratos/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/kustomization.yml
@@ -16,6 +16,11 @@ configMapGenerator:
       - echo-server.configs.env
     options:
       disableNameSuffixHash: true
+  - name: kratos-templates
+    files:
+      - ./templates/email-verification.html.gotmpl
+    options:
+      disableNameSuffixHash: true
 
 resources:
   - pvc.yml
