--- a/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
@@ -434,14 +434,14 @@ statefulSet:
   # -- If you want to mount external volume
   # For example, mount a secret containing Certificate root CA to verify database
   # TLS connection.
-  extraVolumes: []
-  # - name: my-volume
-  #   secret:
-  #     secretName: my-secret
-  extraVolumeMounts: []
-  # - name: my-volume
-  #   mountPath: /etc/secrets/my-secret
-  #   readOnly: true
+  extraVolumes:
+    - name: kratos-templates
+      configMap:
+        name: kratos-templates
+  extraVolumeMounts:
+    - name: kratos-templates
+      mountPath: /conf/courier-templates
+      readOnly: true
 
   # -- If you want to add extra init containers. These are processed before the migration init container.
   extraInitContainers: ""
